; ModuleID = '/home/carl/AnghaBench/curl/src/extr_tool_easysrc.c_easysrc_free.c'
source_filename = "/home/carl/AnghaBench/curl/src/extr_tool_easysrc.c_easysrc_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@easysrc_decl = common dso_local global i32* null, align 8
@easysrc_data = common dso_local global i32* null, align 8
@easysrc_code = common dso_local global i32* null, align 8
@easysrc_toohard = common dso_local global i32* null, align 8
@easysrc_clean = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @easysrc_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @easysrc_free() #0 {
  %1 = load i32*, i32** @easysrc_decl, align 8
  %2 = call i32 @slist_wc_free_all(i32* %1)
  store i32* null, i32** @easysrc_decl, align 8
  %3 = load i32*, i32** @easysrc_data, align 8
  %4 = call i32 @slist_wc_free_all(i32* %3)
  store i32* null, i32** @easysrc_data, align 8
  %5 = load i32*, i32** @easysrc_code, align 8
  %6 = call i32 @slist_wc_free_all(i32* %5)
  store i32* null, i32** @easysrc_code, align 8
  %7 = load i32*, i32** @easysrc_toohard, align 8
  %8 = call i32 @slist_wc_free_all(i32* %7)
  store i32* null, i32** @easysrc_toohard, align 8
  %9 = load i32*, i32** @easysrc_clean, align 8
  %10 = call i32 @slist_wc_free_all(i32* %9)
  store i32* null, i32** @easysrc_clean, align 8
  ret void
}

declare dso_local i32 @slist_wc_free_all(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
